--- a/index.html
+++ b/index.html
@@ -4,15 +4,47 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>Jane Doette</title>
 </head>
+  <body>
+    <div>
+      <div><img src="./bootstrap-prestructure_files/100x100"></div>
+      <div>
+        <h1>Jane Doette</h1>
+        <h3>Front-end Ninja</h3>
+      </div>
+    </div>
+    <div>
+      <img src="./bootstrap-prestructure_files/1140x350">
+    </div>
+    <div>
+      <h2>Featured Work</h2>
+    </div>
+    <div>
+      <div>
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+      <div>
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+      <div>
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+    </div>
 
-<body>
-  <h1>
-    Header 1 text
-  </h1>
-Content of the document......
-  connected?
+  
 </body>
-
 </html>
