--- a/index.html
+++ b/index.html
@@ -7,44 +7,44 @@
 <title>Jane Doette</title>
 </head>
   <body>
-    <div>
-      <div><img src="./bootstrap-prestructure_files/100x100"></div>
-      <div>
-        <h1>Jane Doette</h1>
-        <h3>Front-end Ninja</h3>
+    <div class="container">
+      <div class = "row">
+        <div class = "col-md-6"><img src="http://placekitten.com/100/100"></div>
+        <div class = "col-md-6">
+          <h1>Jane Doette</h1>
+          <h3>Front-end Ninja</h3>
+        </div>
       </div>
-    </div>
-    <div>
-      <img src="./bootstrap-prestructure_files/1140x350">
-    </div>
-    <div>
-      <h2>Featured Work</h2>
-    </div>
-    <div>
-      <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+      <div>      
+        <img src="http://placekitten.com/1140/350">
       </div>
       <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+        <h2>Featured Work</h2>
       </div>
       <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
+        <div>
+          <img src="http://placekitten.com/555/300">
+          <h3>Appify</h3>
+          <p><a href="http://github.com/">Link to project</a></p>
+        </div>
+        <div>
+          <img src="http://placekitten.com/555/300">
+          <h3>Appify</h3>
+          <p><a href="http://github.com/">Link to project</a></p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <img src="http://placekitten.com/555/300">
+          <h3>Appify</h3>
+          <p><a href="http://github.com/">Link to project</a></p>
+        </div>
+        <div>
+          <img src="http://placekitten.com/555/300">
+          <h3>Appify</h3>
+          <p><a href="http://github.com/">Link to project</a></p>
+        </div>
       </div>
     </div>
-
-  
 </body>
 </html>
