--- a/index.html
+++ b/index.html
@@ -29,19 +29,26 @@
       </div>
       
       <div class = "row">
-        <div class = "col-md-4">
+        <div class = "col-md-6">
           <img src="http://placekitten.com/555/300">
           <h3>Appify</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>
-        <div class = "col-md-4">
+        <div class = "col-md-6">
           <img src="http://placekitten.com/555/300">
           <h3>Sunflower</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>  
-        <div class = "col-md-4">
+      </div>
+      <div class = "row">
+        <div class = "col-md-6">
           <img src="http://placekitten.com/555/300">
           <h3>Bokeh</h3>
+          <p><a href="http://github.com/">Link to project</a></p>
+        </div>
+        <div class = "col-md-6">
+          <img src="http://placekitten.com/555/300">
+          <h3>Bokeh2</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>
       </div>
