--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class = "row">
         <div class = "col-md-6"><img src="http://placekitten.com/100/100"></div>
-        <div class = "col-md-6 text-right">
+        <div class = "col-md-6 text-right text-uppercase">
           <h1>Jane Doette</h1>
           <h3>Front-end Ninja</h3>
         </div>
