--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <!-- Latest compiled and minified CSS -->
+<!-- link below is to Content Delivery Network -->
+<!--
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+-->
+<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 <meta charset="UTF-8">
 <title>fluffy meme</title>
 </head>
