--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<!-- link below is to Content Delivery Network. Other link is to my github bootstrap css folder -->
 <!-- Latest compiled and minified CSS -->
-<!-- link below is to Content Delivery Network -->
 <!--
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 -->
 <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>fluffy meme</title>
 </head>
+  
   <body>
     <div class="container">
       <div class = "row">
@@ -18,6 +20,10 @@
           <h1>Jane Doette</h1>
           <h3>Front-end Ninja</h3>
         </div>
+      </div>
+      
+      <div class = "row">
+        <hr>
       </div>
       
       <div class = "row">
