--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-<link rel="stylesheet" href="style.css"
+<link rel="stylesheet" href="style.css">
 <!-- put our custom css link after the bootstrap css link so that ours is applied if there's a conflict -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
