--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class = "row">
         <div class = "col-md-6"><img src="http://placekitten.com/100/100"></div>
         <div class = "col-md-6 text-right text-uppercase">
-          <h1>Jane Doette</h1>
+          <h1 class = "text-thin">Jane Doette</h1>
           <h3>Front-end Ninja</h3>
         </div>
       </div>
