--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <div class="container">
       <div class = "row">
-        <div class = "col-md-6"><img src="http://placekitten.com/100/100"></div>
+        <div class = "col-md-6"><img class = "title-logo" src="http://placekitten.com/100/100"></div>
         <div class = "col-md-6 text-right text-uppercase">
-          <h1 class = "text-thin">Jane Doette</h1>
+          <h1 class = "title-super text-thin">Jane Doette</h1>
           <h3>Front-end Ninja</h3>
         </div>
       </div>
