--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       
-      <div class = "row">
+      <div class = "row text-center">
         <div class = "col-md-6">
           <img src="http://placekitten.com/555/300" class = "img-responsive">
           <h3>Appify</h3>
@@ -53,7 +53,7 @@
           <p><a href="http://github.com/">Link to project</a></p>
         </div>  
       </div>
-      <div class = "row">
+      <div class = "row text-center">
         <div class = "col-md-6">
           <img src="http://placekitten.com/555/300" class = "img-responsive">
           <h3>Bokeh</h3>
