--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       
       <div class = "row text-center">
         <div class = "col-md-6">
-          <img src="http://placekitten.com/555/300" class = "img-responsive" data-toggle="modal" data-target="#myModal">
+          <img src="http://placekitten.com/555/300" class = "img-responsive" data-toggle="modal" data-target="#project1">
           <h3>Appify</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>
