--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
             </div>
             <div class="modal-body">
-                <img class="img-responsive" src="images/555.jpeg">
+                <img class="img-responsive" src="ttp://placekitten.com/555/300">
                 This was my first project in this class. I learned a lot about HTML and CSS.
             </div>
             <div class="modal-footer">
