--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p><a href="http://github.com/">Link to project</a></p>
         </div>
         <div class = "col-md-6">
-          <img src="http://placekitten.com/555/300" class = "img-responsive">
+          <img src="http://placekitten.com/555/300" class = "img-responsive" data-toggle="modal" data-target="#project1">
           <h3>Sunflower</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>  
